--- a/article/como-estudar-sozinho.html
+++ b/article/como-estudar-sozinho.html
@@ -28,8 +28,20 @@
         </nav>
     </div>
     <main id="blog">
-        <h1>Volo scribere</h1>
-        <hr id="blog-hr">
+        <nav id="side-bar">
+            <h3>Blog</h3>
+            <hr>
+            <div class="div-icon">
+                <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
+                <a href="https://www.instagram.com/_jhoniris/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <!--
+                    <a href="https://wa.me/5577981398699?text=Ol%C3%A1,%20quero%20fazer%20uma%20or%C3%A7amento." class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                -->
+                <a href="https://t.me/JhonataSande"><i class="fa-brands fa-telegram"></i></a>
+            </div>
+        </nav>
+        
         <section id="article">
             <h3 id="title-article">Por onde começar a estudar sozinho ?</h3>
             <hr>
