--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" prefix="ov: http://open.vocab.org/terms/">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,34 +27,39 @@
         </nav>
     </div>
     <main id="blog">
-        <h1>Volo scribere</h1>
-        <hr id="blog-hr">
-        <section>
-            <h3>Artigos</h3>
-            <!--   
-            <a href="">
-                <article>
-                    <img src="" alt="">
-                    <div class="content">
-                        <h2></h2>
-                        <p></p>
-                        <p class="date"></p>
-                    </div>
-                </article>
-            </a>
-            -->
-            <a href="article/como-estudar-sozinho.html">
-                <article>
-                    <img src="https://cdn.pixabay.com/photo/2015/10/02/15/00/diary-968592_960_720.jpg" alt="">
-                    <div class="content">
-                        <h2>Por onde começar a estudar sozinho ?</h2>
-                        <p>Saber por onde começar faz toda a diferença.</p>
-                        <p class="date">26 de março, 2023</p>
-                    </div>
-                    <hr>
-                </article>
-            </a>
-        </section>
+            <nav id="side-bar">
+                <h3>Blog</h3>
+                <hr>
+                <div class="div-icon">
+                    <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
+                    <a href="https://www.instagram.com/_jhoniris/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <!--
+                        <a href="https://wa.me/5577981398699?text=Ol%C3%A1,%20quero%20fazer%20uma%20or%C3%A7amento." class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    -->
+                    <a href="https://t.me/JhonataSande"><i class="fa-brands fa-telegram"></i></a>
+                </div>
+            </nav>
+            <section id="articles">
+                <!--   
+                <a href="">
+                    <article>
+                        <img src="" alt="">
+                        <div class="content">
+                            <h2></h2>
+                            <p></p>
+                            <p class="date"></p>
+                        </div>
+                    </article>
+                </a>
+                -->
+                <a href="article/como-estudar-sozinho.html">
+                    <article>
+                        <span class="date">Mai 26, 2023</span>
+                        <p>Por onde começar a estudar sozinho ?</p>
+                    </article>
+                </a>
+            </section>
     </main>
 </body>
 </html>
