comendo-corretamente.html
Adição de um novo artigo, e correção de algmas linhas css

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     </div>
     <main id="blog">
             <nav id="side-bar">
-                <h3>Blog</h3>
+                <h3><a href="#">Blog</a></h3>
                 <hr>
                 <div class="div-icon">
                     <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -44,19 +44,23 @@
                 <!--   
                 <a href="">
                     <article>
-                        <img src="" alt="">
-                        <div class="content">
-                            <h2></h2>
-                            <p></p>
-                            <p class="date"></p>
-                        </div>
+                        <span class="date"></span>
+                        <p></p>
                     </article>
                 </a>
                 -->
-                <a href="article/como-estudar-sozinho.html">
+                <a href="article/comendo-corretamente.html">
                     <article>
-                        <span class="date">Mai 26, 2023</span>
-                        <p>Por onde começar a estudar sozinho ?</p>
+                        <span class="date">Mai 20, 2023</span>
+                        <p>Comendo corretamente</p>
+                    </article>
+                    <hr>
+                </a>
+
+                <a href="article/por-onde-começar-a-estudar.html">
+                    <article>
+                        <span class="date">Mar 26, 2023</span>
+                        <p>Por onde começar a estudar ?</p>
                     </article>
                 </a>
             </section>
