--- a/article/comendo-corretamente.html
+++ b/article/comendo-corretamente.html
@@ -114,7 +114,7 @@
             </ol>
             <p class="topic-h1">Passo #3: Quais alimentos comer?</p>
             <p class="topic-h2">Carboidratos</p>
-            <p class="text-article">&nbsp;&nbsp;“Esse nutriente é o principal combustível utilizado pelo nosso corpo como fonte de energia e uma alimentação deficiente em carboidratos pode causar alguns sintomas como fraqueza, irritabilidade e até mesmo depressão. - <a href="https://sites.usp.br/rema/os-carboidratos-e-sua-importancia-para-o-corpo-humano/">USP, Thaisog</a>"</p>
+            <p class="text-article">&nbsp;&nbsp;“Esse nutriente é o principal combustível utilizado pelo nosso corpo como fonte de energia e uma alimentação deficiente em carboidratos pode causar alguns sintomas como fraqueza, irritabilidade e até mesmo depressão. - <a href="https://sites.usp.br/rema/os-carboidratos-e-sua-importancia-para-o-corpo-humano/" target="_blank">USP, Thaisog</a>"</p>
             <p class="topic-h3">Carboidratos simples</p>
             <p class="text-article">&nbsp;&nbsp;Os carboidratos simples são rapidamente absorvidos, já que sua cadeia molecular é mais simples, tendo assim um alto índice glicêmico, tais alimentos antes de uma atividade física.</p>
             <ul class="three-column">
@@ -194,7 +194,7 @@
                 <li class="text-article">Manteiga.</li>
             </ul>
             <p class="topic-h1">Passo #4: Suplementação</p>
-            <p class="text-article">&nbsp;&nbsp;“Os suplementos alimentares são preparações destinadas a fornecer nutrientes, como vitaminas, minerais, fibras, ácidos graxos ou aminoácidos, que podem estar faltando ou não serem consumidos em quantidade suficiente na dieta/alimentação de uma pessoa. - <a href="https://pt.wikipedia.org/wiki/Suplemento_alimentar">Wikipédia</a>”</p>
+            <p class="text-article">&nbsp;&nbsp;“Os suplementos alimentares são preparações destinadas a fornecer nutrientes, como vitaminas, minerais, fibras, ácidos graxos ou aminoácidos, que podem estar faltando ou não serem consumidos em quantidade suficiente na dieta/alimentação de uma pessoa. - <a href="https://pt.wikipedia.org/wiki/Suplemento_alimentar" target="_blank">Wikipédia</a>”</p>
             <ul>
                 <li class="text-article"><strong>Creatina</strong>: é um composto de aminoácidos presente nas fibras musculares e no cérebro, não sendo essencial a suplementação, ou seja, não dependemos da ingestão pois pode ser produzida pelo organismo humano. Contudo a suplementação desse composto pode elevar as concentrações musculares, o que é proposto como agente ergogênico. Para isso, a dosagem diária não deve ser inferior a 3 gramas.</li>
                 <li class="text-article"><strong>Whey Protein</strong>: Nada mais é do que a proteína do soro do leite.</li>
