--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <img src="img/jogo_da_velha.jpg" alt="">
                             <div class="text">
                                 <h2>Jogo da Velha</h2>
-                                <p>IA em faze incial.</p>
+                                <p>IA em fase incial.</p>
                                 <p>Tecnologias:
                                     <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
                             </div>
