--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="align"></div>
             <div class="cards">
                 <!--
-                <a href="" target="_blank">                
+                <a href="" target="_blank">
                     <div class="content">
                         <div class="card">
                             <img src="" alt="">
@@ -67,7 +67,21 @@
                     </div>
                 </a>
                 -->
-                <a href="https://userstyles.world/style/9765/habitica-minimalist-et-obscura" target="_blank">                
+                <a href="https://github.com/Jhonatafs/monitor-brightness" target="_blank">
+                    <div class="content">
+                        <div class="card">
+                            <img src="img/monitor-brightness.png" alt="">
+                            <div class="text">
+                                <h2>Brilho do monitor</h2>
+                                <p>Script que controlasse o brilho da tela</p>
+                                <p>Tecnologia:
+                                    Shell Script</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://userstyles.world/style/9765/habitica-minimalist-et-obscura" target="_blank">
                     <div class="content">
                         <div class="card">
                             <img src="img/habitica.jpg" alt="">
@@ -80,7 +94,7 @@
                     </div>
                 </a>
 
-                <a href="projects/jogo_da_velha.html">                
+                <a href="projects/jogo_da_velha.html">
                     <div class="content">
                         <div class="card">
                             <img src="img/jogo_da_velha.jpg" alt="">
@@ -94,7 +108,7 @@
                     </div>
                 </a>
 
-                <a href="https://csteam.vercel.app/" target="_blank">                
+                <a href="https://csteam.vercel.app/" target="_blank">
                     <div class="content">
                         <div class="card">
                             <img src="img/csteam.jpg" alt="">
@@ -108,7 +122,7 @@
                     </div>
                 </a>
 
-                <a href="projects/gerarcor/hex.html ">                
+                <a href="projects/gerarcor/hex.html ">
                     <div class="content">
                         <div class="card">
                             <img src="img/gerarcor.jpg" alt="">
@@ -121,7 +135,7 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/Jhonatafs/Calculadora" target="_blank">                
+                <a href="https://github.com/Jhonatafs/Calculadora" target="_blank">
                     <div class="content">
                         <div class="card">
                             <img src="/img/calculadora.jpg" alt="">
@@ -135,7 +149,7 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/Jhonatafs/HuEscreva" target="_blank">                
+                <a href="https://github.com/Jhonatafs/HuEscreva" target="_blank">
                     <div class="content">
                         <div class="card">
                             <img src="/img/editordetexto.jpg" alt="">
