--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <img src="img/monitor-brightness.png" alt="">
                             <div class="text">
                                 <h2>Brilho do monitor</h2>
-                                <p>Script que controlasse o brilho da tela</p>
+                                <p>Script que controla o brilho da tela</p>
                                 <p>Tecnologia:
                                     Shell Script</p>
                             </div>
