--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p><strong>Paixões:</strong> Livros, Xadres, e RPG</p>
             <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
             <p><strong>Tel.:</strong> +55 77 98139-8699</p>
-            <p><strong>Habilidades:</strong> Java, JavaScript, MySQL, Shell Script, HTML5, CSS3</p>
+            <p><strong>SO Favorito:</strong> Arch Linux (i3-wm)</p>
             <div class="div-icon">
                 <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
