--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
             <p><strong>Tel.:</strong> +55 77 98139-8699</p>
             <p><strong>SO. Favorito:</strong> Arch Linux (i3-wm)</p>
+            <p><strong>Currículo:</strong>
+                <a href="curriculo/Currículo Dev Jhon.pdf" class="link" target="_blank">Dev.pdf</a> |
+                <a href="curriculo/Currículo Dev Jhon.docx" class="link">Dev.docx</a> |
+                <a href="curriculo/Currículo Gen Jhon.pdf" class="link" target="_blank">Gen.pdf</a> |
+                <a href="curriculo/Currículo Gen Jhon.docx" class="link">Gen.docx</a>
+            </p>
             <div class="div-icon">
                 <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
