--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/0c2f8cb29c.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
-    <title>JhonFs</title>
+    <title>Blog: JhonFs</title>
 </head>
 <body id="body-blog">
     <div id="topbar">
@@ -28,7 +28,14 @@
     </div>
     <main id="blog">
             <nav id="side-bar">
-                <h3><a href="#">Blog</a></h3>
+                <ul>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="blog/sobre.html">Sobre</a>
+                    </li>
+                </ul>
                 <hr>
                 <div class="div-icon">
                     <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -42,22 +49,29 @@
             </nav>
             <section id="articles">
                 <!--   
-                <a href="">
+                <a href="blog/article/">
                     <article>
                         <span class="date"></span>
                         <p></p>
                     </article>
                 </a>
+                <hr>
                 -->
-                <a href="article/comendo-corretamente.html">
+                <a href="blog/article/minhas-notas-latim.html">
+                    <article>
+                        <span class="date">Set 29, 2023 </span>
+                        <p>Minhas Notas: Latim</p>
+                    </article>
+                </a>
+                <hr>
+                <a href="blog/article/comendo-corretamente.html">
                     <article>
                         <span class="date">Mai 20, 2023</span>
                         <p>Comendo corretamente</p>
                     </article>
-                    <hr>
                 </a>
-
-                <a href="article/por-onde-começar-a-estudar.html">
+                <hr>
+                <a href="blog/article/por-onde-começar-a-estudar.html">
                     <article>
                         <span class="date">Mar 26, 2023</span>
                         <p>Por onde começar a estudar ?</p>
@@ -65,5 +79,8 @@
                 </a>
             </section>
     </main>
+    <footer>
+        <p>Por JhonFs</p>
+    </footer>
 </body>
 </html>
