--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/7f2a2658dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="css/style-all.css">
+    <link rel="icon" href="img/icon.svg" type="xml/svg">
     <script src="js/themes.js"></script>
     <title>JhonFs</title>
 </head>
@@ -41,14 +42,8 @@
         -->
         <section>
             <p>2023-09-08</p>
-            <a href="" class="title-article">
-                <p>Meu mapa para Ciências da Computação</p>
-            </a>
-        </section>
-        <section>
-            <p>2023-09-08</p>
-            <a href="" class="title-article">
-                <p>Meu mapa para Ciências da Computação</p>
+            <a class="title-article" href="files/posts/mapa-mental-ciencias-da-computacao.html">
+                <p>Mapa mental: Ciências da Computação</p>
             </a>
         </section>
     </main>
