--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         -->
         <section>
             <p>2023-09-08</p>
-            <a class="title-article" href="files/posts/mapa-mental-ciencias-da-computacao.html">
-                <p>Mapa mental: Ciências da Computação</p>
+            <a class="title-article" href="files/posts/meu-caminho-para-as-ciencias-da-computacao.html">
+                <p>Meu caminho para as Ciências da Computação</p>
             </a>
         </section>
     </main>
