--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3 id="logo"><a href="http://jhonfs.com">Jhonfs</a></h3>
         <ul>
             <li><a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/jhonfs" targuet="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/jhonfs" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
             <li><button onclick="changeTheme()">
                 <i id="lux" class="fa-solid fa-lightbulb"></i>
             </button></li>
