--- a/index.html
+++ b/index.html
@@ -27,25 +27,23 @@
         <div>
             <h3>Olá.</h3>
             <p>Sou o Jhonata, nesse pequeno espaço da web, estarei postanto artigos, projetos e minhas notas de estudo.</p>
-            <a class="button" href="files/Currículo JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a>
+            <a class="button" href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a>
         </div>
     </section>
     <main>
         <h3 id="title">publicações</h3>
-        <!--
-            <section>
-                <p></p>
-                <a href="">
-                    <p></p>
-                </a>
-            </section>
-        -->
-        <section>
+        <article>
+            <p>2023-09-09</p>
+            <a class="title-article" href="files/posts/minhas-notas-1-o-alfabeto.html">
+                <p>Minhas Notas #1: O Alfabeto</p>
+            </a>
+        </article>
+        <article>
             <p>2023-09-08</p>
             <a class="title-article" href="files/posts/meu-caminho-para-as-ciencias-da-computacao.html">
                 <p>Meu caminho para as Ciências da Computação</p>
             </a>
-        </section>
+        </article>
     </main>
     <footer>
         <hr>
