--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <section id="welcome">
-        <img src="img/me.png" alt="" style="max-width: 20%;">
+        <img id="meimg" src="img/me.png" alt="" style="max-width: 20%;">
         <div>
             <h3>Olá.</h3>
             <p>Sou o Jhonata, nesse pequeno espaço da web, estarei postanto artigos, projetos e minhas notas de estudo.</p>
