--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <main>
         <h3 id="title">publicações</h3>
         <article>
-            <p>2023-09-09</p>
+            <p class="data">2023-09-09</p>
             <a class="title-article" href="files/posts/minhas-notas-1-o-alfabeto.html">
                 <p>Minhas Notas #1: O Alfabeto</p>
             </a>
         </article>
         <article>
-            <p>2023-09-08</p>
+            <p class="data">2023-09-08</p>
             <a class="title-article" href="files/posts/meu-caminho-para-as-ciencias-da-computacao.html">
                 <p>Meu caminho para as Ciências da Computação</p>
             </a>
