--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     </section>
     <main>
         <h3 id="title">publicações</h3>
-        <article>
+        <article class="publi">
             <p class="data">2023-09-09</p>
             <a class="title-article" href="files/posts/minhas-notas-1-o-alfabeto.html">
                 <p>Minhas Notas #1: O Alfabeto</p>
             </a>
         </article>
-        <article>
+        <article class="publi">
             <p class="data">2023-09-08</p>
             <a class="title-article" href="files/posts/meu-caminho-para-as-ciencias-da-computacao.html">
                 <p>Meu caminho para as Ciências da Computação</p>
