--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer>
         <hr>
         <ul>
-            <a href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a>
+            <li><a href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a></li>
             <li>yonatan.fs@proton.me <i class="fa-solid fa-envelope"></i></li>
         </ul>
     </footer>
