--- a/index.html
+++ b/index.html
@@ -14,13 +14,7 @@
     <title>JhonFs</title>
 </head>
 <body>
-    <nav id="navbar">
-            <h3 id="logo"><a href="http://jhonfs.com"> Jhonfs <i class="fa-solid fa-mug-hot"></i></a></h3>
-        <ul>
-            <li><a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/jhonfs" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
-        </ul>
-    </nav>
+    <h3 id="logo"><a href="http://jhonfs.com"> Jhonfs <i class="fa-solid fa-mug-hot"></i></a></h3>
     <section id="welcome">
         <img id="meimg" src="img/me.gif" alt="">
         <p>Bem-vindo ao meu pequeno espaço na web, sou o Jhon de Jhonata, derivado do latim <i>Ionathan</i>, que veio do grego <i>Ιωναθαν</i>, cuja origem vem do hebraico <i>יונתן</i>. Uso esse espaço para escrever, publica projetos, etc.</p>
@@ -45,6 +39,8 @@
         <ul>
             <li><a href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a></li>
             <li>yonatan.fs@proton.me <i class="fa-solid fa-envelope"></i></li>
+            <li><a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i> GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/jhonfs" target="_blank"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a></li>
         </ul>
     </footer>
 </body>
