--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>JhonFs</title>
 </head>
 <body>
-    <h3 id="logo"><a href="http://jhonfs.com"> Jhonfs <i class="fa-solid fa-mug-hot"></i></a></h3>
+    <h3 id="logo"><a href="http://jhonfs.com">Jhonfs</a></h3>
     <section id="welcome">
         <img id="meimg" src="img/me.gif" alt="">
         <p>Bem-vindo ao meu pequeno espaço na web, sou o Jhon de Jhonata, derivado do latim <i>Ionathan</i>, que veio do grego <i>Ιωναθαν</i>, cuja origem vem do hebraico <i>יונתן</i>. Uso esse espaço para escrever, publica projetos, etc.</p>
@@ -22,23 +22,17 @@
     <main id="arquive">
         <h3>Arquivos</h3>
         <article class="publi">
-            <p class="data">2023-09-09</p>
-            <a class="title" href="files/posts/minhas-notas-1-o-alfabeto.html">
-                <p>Minhas Notas #1: O Alfabeto</p>
-            </a>
-        </article>
-        <article class="publi">
             <p class="data">2023-09-08</p>
-            <a class="title" href="files/posts/meu-caminho-para-as-ciencias-da-computacao.html">
-                <p>Meu caminho para as Ciências da Computação</p>
+            <a class="title" href="files/posts/minhaJornadaCC.html">
+                <p>Minha Jornada às Ciências da Computação</p>
             </a>
         </article>
     </main>
     <footer>
         <hr>
         <ul>
-            <li><a href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a></li>
             <li>yonatan.fs@proton.me <i class="fa-solid fa-envelope"></i></li>
+            <li><a href="files/download/ JhonFs.pdf" target="_blank">Currículo <i class="fa-solid fa-download"></i></a></li>
             <li><a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i> GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/jhonfs" target="_blank"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a></li>
         </ul>
