--- a/files/minhaJornadaCC/prefacio.html
+++ b/files/minhaJornadaCC/prefacio.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <nav id="menu">
-        <p>Próx.: <a href="#">Fundamentos</a>, 
+        <span>Próx.: <a href="#">Fundamentos</a>, 
             Volt.: <a href="../posts/minhaJornadaCC.html">Índice</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            [ <a href="../../index.html">JhonFs</a> ]</p>
+            [ <a href="../../index.html">JhonFs</a> ]</span>
     </nav>
     <article id="post">
         <h1>Préfacio</h1>
