--- a/files/minhaJornadaCC/prefacio.html
+++ b/files/minhaJornadaCC/prefacio.html
@@ -25,6 +25,11 @@
         <p>Aqui, vou agir como se estivesse ensinando a muitos, com o objetivo de aprender, afinal, aquele que ensina também aprende.</p>
 
     </article>
+    <nav id="menu">
+        <span>Próx.: <a href="#">Fundamentos</a>, 
+            Volt.: <a href="../posts/minhaJornadaCC.html">Índice</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            [ <a href="../../index.html">JhonFs</a> ]</span>
+    </nav>
     <footer>
         <hr>
         <ul>
