--- a/files/minhaJornadaCC/prefacio.html
+++ b/files/minhaJornadaCC/prefacio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav id="menu">
-        <span>Próx.: <a href="#">Fundamentos</a>, 
+        <span>Próx.: <a href="#">1. Fundamentos</a>, 
             Volt.: <a href="../posts/minhaJornadaCC.html">Índice</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="../../index.html">JhonFs</a> ]</span>
     </nav>
@@ -26,7 +26,7 @@
 
     </article>
     <nav id="menu">
-        <span>Próx.: <a href="#">Fundamentos</a>, 
+        <span>Próx.: <a href="#">1. Fundamentos</a>, 
             Volt.: <a href="../posts/minhaJornadaCC.html">Índice</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="../../index.html">JhonFs</a> ]</span>
     </nav>
