--- a/files/minhaJornadaCC/retorica.html
+++ b/files/minhaJornadaCC/retorica.html
@@ -6,28 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#363636">
     <script src="https://kit.fontawesome.com/7f2a2658dd.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/var.css">
-    <link rel="stylesheet" href="css/style-all.css">
-    <link rel="stylesheet" href="css/style-index.css">
+    <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="/css/style-all.css">
+    <link rel="stylesheet" href="../../css/style-post.css">
     <link rel="icon" href="../../img/favicon.png">
     <title>JhonFs</title>
 </head>
 <body>
-    <h3 id="logo"><a href="http://jhonfs.com">Jhonfs</a></h3>
-    <section id="welcome">
-        <img id="meimg" src="img/me.gif" alt="">
-        <p>Bem-vindo ao meu pequeno espaço na web, sou o Jhon de Jhonata, derivado do latim <i>Ionathan</i>, que veio do grego <i>Ιωναθαν</i>, cuja origem vem do hebraico <i>יונתן</i>. Uso esse espaço para escrever, publica projetos, etc.</p>
-    </section>
-    <main id="arquive">
-        <h3>Arquivos</h3>
-        <article class="publi">
-            <p class="data">2023-09-08</p>
-            <a class="title" href="files/posts/minhaJornadaCC.html">
-                <p>Minha Jornada às Ciências da Computação</p>
-            </a>
-        </article>
-    </main>
+    <nav id="menu">
+        <span>Próx.: <a href="dialetica.html">1.1.3 Dialética</a>, 
+            Volt.: <a href="gramatica.html">1.1.1 Gramática</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            [ <a href="../posts/minhaJornadaCC.html">Índice</a> ]</span>
+    </nav>
+    <article id="post">
+        <h1>Retórica</h1>
+        <p>Ainda estou em processo de estudo. Assim que concluir essa etapa, vou estruturar e compartilhar meus conhecimentos aqui.</p>
+    </article>
+    <nav id="menu">
+        <span>Próx.: <a href="dialetica.html">1.1.3 Dialética</a>, 
+            Volt.: <a href="gramatica.html">1.1.1 Gramática</a>&nbsp;&nbsp;&nbsp;&nbsp;
+            [ <a href="../posts/minhaJornadaCC.html">Índice</a> ]</span>
+    </nav>
     <footer>
         <hr>
         <ul>
