--- a/files/minhaJornadaCC/prefacio.html
+++ b/files/minhaJornadaCC/prefacio.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../../css/normalize.css">
     <link rel="stylesheet" href="/css/style-all.css">
     <link rel="stylesheet" href="../../css/style-post.css">
-    <link rel="icon" href="../../img/favicon.svg" color="#363636">
+    <link rel="icon" href="../../img/favicon.png">
     <title>JhonFs</title>
 </head>
 <body>
     <nav id="menu">
-        <span>Próx.: <a href="#">1. Fundamentos</a>, 
+        <span>Próx.: <a href="meucaminho.html">Meu Caminho</a>, 
             Volt.: <a href="../posts/minhaJornadaCC.html">Índice</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="../../index.html">JhonFs</a> ]</span>
     </nav>
@@ -26,7 +26,7 @@
 
     </article>
     <nav id="menu">
-        <span>Próx.: <a href="#">1. Fundamentos</a>, 
+        <span>Próx.: <a href="meucaminho.html">Meu Caminho</a>, 
             Volt.: <a href="../posts/minhaJornadaCC.html">Índice</a>&nbsp;&nbsp;&nbsp;&nbsp;
             [ <a href="../../index.html">JhonFs</a> ]</span>
     </nav>
