--- a/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/adicaoesubtracaodefracoes.html
+++ b/files/minhajornadacc/fundamentos/matematicabasica/teoriadosnumerosearitimetica/adicaoesubtracaodefracoes.html
@@ -23,18 +23,15 @@
         <p>A adição e subtração de frações com denominadores iguais são bastante simples. Basta somar (ou subtrair) os numeradores enquanto mantém o denominador inalterado. Vamos voltar ao exemplo da pizza: se eu comi duas fatias e você comeu mais seis, juntos consumimos oito das oito fatias totais da pizza. Isso é representado como 2/8 + 6/8, que iguala 8/8.</p>
         <p>Agora, imagine que você pediu uma pizza grande com 10 fatias e comeu 5 delas, enquanto eu comprei uma pizza média de 8 fatias e comi 7. Para calcular a quantidade total consumida, podemos realizar uma multiplicação cruzada com alguns detalhes:</p>
         <figure>
-            <img src="/img/adicaoesubtracaodefracoes-fig1.png" alt="">
-            <figcaption>Forma excrita: 5/10 + 7/8 = (5*8 + 7*10)/(10*8) = 110/80 = 11/8.</figcaption>
+            <img src="/img/adicaoesubtracaodefracoes-fig1.png" alt="5/10 + 7/8 = (5*8 + 7*10)/(10*8) = 110/80 = 11/8">
         </figure>
         <p>E se fosse subtração? Faríamos a mesma coisa, trocamos apenas o sinal:</p>
         <figure>
-            <img src="/img/adicaoesubtracaodefracoes-fig2.png" alt="">
-            <figcaption>Forma excrita: 7/8 - 5/10 = (7*10 - 5*8)/(8*10) = 30/80 = 3/8.</figcaption>
+            <img src="/img/adicaoesubtracaodefracoes-fig2.png" alt="7/8 - 5/10 = (7*10 - 5*8)/(8*10) = 30/80 = 3/8">
         </figure>
         <p>Nesse exemplo, podemos observar que a adição e a subtração de frações compartilham algumas semelhanças, mas a subtração não possui as propriedades comutativa e associativa que a adição possui. Isso é evidenciado pela diferença nos resultados quando trocamos a ordem das operações:</p>
         <figure>
-            <img src="/img/adicaoesubtracaodefracoes-fig3.png" alt="">
-            <figcaption>Forma excrita: 7/8 - 5/10 = (7*10 - 5*8)/(8*10) = 30/80 = 3/8.</figcaption>
+            <img src="/img/adicaoesubtracaodefracoes-fig3.png" alt="7/8 - 5/10 = (7*10 - 5*8)/(8*10) = 30/80 = 3/8">
         </figure>
         <p>Aqui, aprendemos três conceitos importantes: fração, porcentagem e fração simplificada. Por exemplo, 2/8 é a forma simplificada de 25/100. Qualquer fração pode ser simplificada, e o processo é simples: basta dividir o numerador e o denominador pelo mesmo número. Vamos ver outro exemplo com a fração 40/200:</p>
         <p>Se dividirmos o numerador (40) e o denominador (200) por 10, obtemos 4/20. Agora, podemos simplificar ainda mais, dividindo ambos por 4, o que nos deixa com 1/5.</p>
